<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#FAF7EE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Start" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/st0"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/sbut"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/but_normal" 
        android:textColor="@color/btc"
        android:text="@string/st1" />

    <Button
        android:id="@+id/ebut"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hbut"
        android:layout_centerHorizontal="true"
         android:background="@drawable/but_normal" 
        android:textColor="@color/btc"
        android:layout_marginTop="18dp"
        android:text="@string/st3" />

    <Button
        android:id="@+id/hbut"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sbut"
        android:background="@drawable/but_normal" 
        android:textColor="@color/btc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/st2" />

</RelativeLayout>