<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp" >

    
    
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/but_normal"
         android:text="@string/ht1"
        android:textColor="@color/btc" />

    <Button
        android:id="@+id/hback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/but_normal"
        android:text="@string/ht0"
        android:textColor="@color/btc" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="0sp"
         >

        <TableRow
            android:id="@+id/titleRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/but_normal"
                android:text="@string/ht2"
                android:textColor="@color/btc" />
			
            <Button
                android:id="@+id/hscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/but_normal"
                android:text="@string/ht3"
                android:textColor="@color/btc" />
        </TableRow>
       
         <TableRow
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
              <Button
                android:id="@+id/ranking1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="1"
                />

            <Button
                android:id="@+id/hscore1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="0"
                />
             
        </TableRow>
         <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <Button
                android:id="@+id/ranking2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="2"
                />

            <Button
                android:id="@+id/hscore2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="0"
                />
        </TableRow>
         <TableRow
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="3"
                />

            <Button
                android:id="@+id/hscore3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="0"
               />
        </TableRow>
         <TableRow
            android:id="@+id/row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="4"
              />

            <Button
                android:id="@+id/hscore4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="0"
                 />
        </TableRow>
         <TableRow
            android:id="@+id/row5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="5"
                />

            <Button
                android:id="@+id/hscore5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="0"
                />
        </TableRow>
         <TableRow
            android:id="@+id/row6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="6"
               />

            <Button
                android:id="@+id/hscore6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="0"
                />
        </TableRow>
         <TableRow
            android:id="@+id/row7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="7"
                 />

            <Button
                android:id="@+id/hscore7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="0"
                />
        </TableRow>
         <TableRow
            android:id="@+id/row8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="8"
               />

            <Button
                android:id="@+id/hscore8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="0"
                />
        </TableRow>
         <TableRow
            android:id="@+id/row9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="9"
                />

            <Button
                android:id="@+id/hscore9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oddgrid"
                android:text="0"
                 />
        </TableRow>
         <TableRow
            android:id="@+id/row10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <Button
                android:id="@+id/ranking10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="10"
                 />

            <Button
                android:id="@+id/hscore10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/evengrid"
                android:text="0"
                />
        </TableRow>
    </TableLayout>

</RelativeLayout>